@@ -6,6 +6,8 @@ Development version (next version)
   * Convert float scalar values to cl_half for fp16 routines
   * Amax/amin, max/min routines accept unsigned integer buffers for index
 - Generator script now always use LF endings, independent of the platform
+- Switch to pyproject.toml file for installing python bindings
+- Build python binding using Cmake, adding Windows support
 
 Version 1.6.1
 - Fix pointer error in pyclblast on Arm
